Added empty database

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     dependencies {
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.7.10"
+
+        classpath "androidx.navigation.safeargs.kotlin:androidx.navigation.safeargs.kotlin.gradle.plugin:2.5.2"
     }
 
 }
